--- a/templates/holamundo.html
+++ b/templates/holamundo.html
@@ -1,4 +1,16 @@
+{% load static %}
+
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bienvenido al Mundo</title>
+    <link rel="stylesheet" href="{% static 'css/holamundo.css' %}"> <!-- Enlace al archivo CSS externo -->
+</head>
 <body>
-    <h1>Hola Mundo</h1>
-    <p>Python</p>
+    <h1>Hola mundo</h1>
+    <p>Bienvenido al mundo, puedes compartir cualquier dato interesante.</p>
+    <h2>Bienvenido</h2>
 </body>
+</html>
